monitoring/configs/staging/kube-prometheus-stack/traefik-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
